--- a/message.html
+++ b/message.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="message.html">메세지 기능</a>
+    <h3>메세지 기능</h3>
+    <li>송신</li>
+    <li>수신</li>
 </body>
 </html>
