링크기능 설명 수정

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="tag.html">제한된 계정 페이지</a>
-    <a href="limitacc.html"></a>
+    <a href="tag.html">태그 및 언급</a>
+    <a href="limitacc.html">제한된 계정</a>
     <a href="search.html">검색 기능</a>
     <a href="message.html">메세지 기능</a>
 </body>
